<resources>
    <string name="app_name">ManagerApp</string>
    <string name="activity_label_login">Login</string>
    <string name="activity_label_projects">Projects</string>
    <string name="activity_label_exams">Exams</string>
    <string name="activity_label_degree_courses">Choose your Degree Course</string>
    <string name="activity_label_notifications">Notifications</string>
    <string name="activity_label_new_group">Create Group</string>
    <string name="activity_label_create_studycase">Create Study Case</string>
    <string name="activity_label_create_newExam">Create New Exam</string>
    <string name="activity_label_detail_study_case">Detail Study Case</string>
    <string name="activity_label_user_profile">Profile</string>
    <string name="activity_label_project_permissions">Permissions</string>
    <string name="activity_label_evaluate_project">Evaluate project</string>
    <string name="activity_label_sign_in">Sign In</string>
    <string name="activity_label_department">Choose the department</string>
    <string name="activity_label_exam_partecipants">Partecipants</string>
    <string name="activity_label_project_new_review">Submit a review</string>
    <string name="activity_label_project_new_report">Submit a report</string>
    <string name="activity_label_project_reports">Reports</string>
    <string name="activity_label_project_reviews">Reviews</string>
    <string name="activity_label_projects_sharing">Select the device</string>
    <string name="activity_label_report_replies">Replies</string>
    <string name="activity_label_forgot_password">Insert your email</string>
    <string name="activity_subtitle_not_connected_bluetooth">Not connected</string>
    <string name="activity_subtitle_connecting_bluetooth">Connecting...</string>
    <string name="activity_subtitle_connected_bluetooth">Connected to:</string>
    <string name="label_Dialog_Header">Information</string>
    <string name="label_Dialog_confimation_message">Do you want to be part of this study group?</string>
    <string name="label_Dialog_confimation">Yes</string>
    <string name="label_Dialog_declination">No</string>
    <string name="label_Dialog_success">Operation successful, you are now part of the group: </string>
    <string name="label_Dialog_failed">Error while adding to the group: </string>
    <string name="label_Dialog_title_departments">Select departments</string>
    <string name="label_Dialog_confimation_message_join_necessary">Due to permission settings, this group can only be opened by members. Do you want to be part of this study group?</string>
    <string name="label_Dialog_group_creation">Group creation</string>
    <string name="label_Dialog_title_name_list">Save the received list</string>
    <string name="label_Dialog_turn_on_bluetooth">To share the list you need to turn on the bluetooth</string>
    <string name="label_Dialog_turn_on_gps">To search for available Bluetooth devices, you need to turn on the GPS</string>
    <string name="label_Dialog_title_gps_permission_necessary">Permission necessary</string>
    <string name="label_Dialog_message_gps_permission_necessary">Permission is required to send your project list.</string>
    <string name="label_Dialog_title_gps_permission_denied">Permission denied</string>
    <string name="label_Dialog_message_gps_permission_denied">Without permission the app is unable to send your project list.</string>
    <string name="label_Dialog_title_abandon_project">Are you sure you want to abandon the project?</string>
    <string name="label_Dialog_title_abandon_exam">Are you sure you want to abandon the exam?</string>
    <string name="label_dialog_title_delete_project">Project Deletion</string>
    <string name="label_Dialog_title_delete_studycase">Studycase Deletion</string>
    <string name="label_Dialog_title_delete_exam">Exam Deletion</string>
    <string name="label_Dialog_message_abandon_project">If you are the only member of the project, the group and files associated to the project will also be permanently deleted.</string>
    <string name="label_Dialog_message_abandon_exam">This action will also remove you from the group you belong to</string>
    <string name="text_error_validation">The group name cannot have much than %d characters</string>
    <string name="text_error_max_review_report">The review cannot have much than 800 characters</string>
    <string name="text_label_exams">Exams</string>
    <string name="text_label_projects">Projects</string>
    <string name="text_label_profile">Profile</string>
    <string name="text_label_notifications">Notifications</string>
    <string name="text_label_project_about" translatable="false">About</string>
    <string name="text_label_project_files">Files</string>
    <string name="text_label_project_members">Members</string>
    <string name="text_label_exam_study_cases">Study Cases</string>
    <string name="text_label_exam_groups">Groups</string>
    <string name="text_label_button_student">Student</string>
    <string name="text_label_button_professor">Professor</string>
    <string name="text_label_upload_dialog_title">Upload</string>
    <string name="text_label_logout">Logout</string>
    <string name="text_label_name_study_case">Name</string>
    <string name="text_label_desc_study_case">Description</string>
    <string name="text_label_exam_name">Name</string>
    <string name="text_label_exam_description">Description</string>
    <string name="text_label_name_account">NAME</string>
    <string name="text_label_surname_account">SURNAME</string>
    <string name="text_label_email_account" translatable="false">EMAIL</string>
    <string name="text_label_exam_partecipants">Partecipants</string>
    <string name="text_label_edit_profile">Edit profile</string>
    <string name="text_label_save_profile">Save changes</string>
    <string name="text_label_search">Search</string>
    <string name="text_label_year">Year</string>
    <string name="text_label_permissions">Permissions</string>
    <string name="text_label_evaluate">Evaluate project</string>
    <string name="text_label_update_evaluate">Update evaluation</string>
    <string name="text_label_select_members">Select members</string>
    <string name="text_label_project_reviews">Reviews</string>
    <string name="text_label_project_reports">Reports</string>
    <string name="text_label_file_release_number">Release N.%d</string>
    <string name="text_label_evaluation">Evaluation</string>
    <string name="text_label_my_projects_title">My Projects</string>
    <string name="text_label_lists_projects_received_title">Lists of projects received</string>
    <string name="text_label_available_devices">Available devices:</string>
    <string name="text_label_paired_devices">Paired devices:</string>
    <string name="text_label_name_list">Name list</string>
    <string name="text_label_study_case">Study case</string>
    <string name="text_label_none_evaluation">There is no evaluation</string>
    <string name="text_label_project_preference_visibility">Anyone can view the project</string>
    <string name="text_label_project_preference_free_join">Anyone can join the project</string>
    <string name="text_label_project_preference_max_members">Set max number of partecipants</string>
    <string name="text_label_project_preference_file_accessibility">Anyone can access to the files of the project</string>
    <string name="text_label_project_preference_can_add_file">Set who can add files to the project</string>
    <string name="text_label_project_preference_category_partecipation">Partecipation</string>
    <string name="text_label_project_preference_category_project_files">Project Files</string>
    <string name="text_label_project_preference_category_visibility">Visibility</string>
    <string name="text_label_dialog_title_departments">Select departments</string>
    <string name="text_label_dialog_title_courses">Select courses</string>
    <string name="text_label_upload_file">Upload file (Max. 1MB)</string>
    <string name="text_checkbox_dialog_view_list">View the list received</string>
    <string name="text_label_submit_review">Enter your review</string>
    <string name="text_label_submit_report">Enter your report</string>
    <string name="text_label_none_reviews">There are no reviews</string>
    <string name="text_label_none_reports">There are no reports</string>
    <string name="text_lable_reply_project">Write a reply</string>
    <string name="text_Labelsign_in">Sign in</string>
    <string name="text_label_insert_credential">Insert your credential.</string>
    <string name="text_label_login">Login</string>
    <string name="text_label_login_with">Login with  </string>
    <string name="text_lable_login_google">Google</string>
    <string name="Text_label_here">here</string>
    <string name="text_label_or">Or</string>
    <string name="text_label_question">Do you not have an account?  </string>
    <string name="text_lable_shake_tutorial">Share with a shake</string>
    <string name="text_lable_click">Touch the file for more infos</string>
    <string name="text_label_favourite_projects_title">Favourite Projects</string>
    <string name="text_label_tried_projects_title">Tried Projects</string>
    <string name="text_label_evaluated_projects_title">Evaluated Projects</string>
    <string name="text_label_abandons_project">Abandons project</string>
    <string name="text_label_forgot_password">Did you forget your password?</string>
    <string name="text_label_abandons_exam">Abandons exam</string>
    <string name="text_label_delete_project">Delete Project</string>
    <string name="text_label_delete_studycase">Delete Studycase</string>
    <string name="text_label_delete_exam">Delete Exam</string>
    <string name="text_label_course">Degree Course</string>
    <string name="list_degree_courses_informatica" translatable="false">Informatica</string>
    <string name="list_degree_courses_itps" translatable="false">Informatica e Tecnologie della Produzione del Software</string>
    <string name="list_department_informatica" translatable="false">Informatica</string>
    <string name="list_department_fisica" translatable="false">Fisica</string>
    <string name="registration_success">Registered Successfully</string>
    <string name="send_verification_email_success">Verification email sent to </string>
    <string name="login_success">Login successful!</string>
    <string name="error_sha1_not_found">App key not found. The app may have been modified from third parties.</string>
    <string name="required_field">Required field</string>
    <string name="error_password">Password must contain at least 8 characters.</string>
    <string name="error_email">The email is not in the valid format</string>
    <string name="send_verification_email_failed">Failed to send verification email.</string>
    <string name="registration_failed">Registration failed</string>
    <string name="login_failed">Login failed! Please try again later</string>
    <string name="creation_exam_failed">Error during exam creation</string>
    <string name="label_error_fields">The Exam name, year and degree course are necessary</string>
    <string name="text_button_submit">Submit</string>
    <string name="text_hint_email_user" translatable="false">Email</string>
    <string name="text_hint_password_user" translatable="false">Password</string>
    <string name="text_hint_report_project">What would you like to report to the group?</string>
    <string name="text_default_name_list_received">List received</string>
    <string name="text_filter_file_release">Releases</string>
    <string name="text_filter_file_image">Images</string>
    <string name="text_filter_file_video">Video</string>
    <string name="text_filter_file_pdf" translatable="false">PDF</string>
    <string name="text_filter_file_doc" translatable="false">.doc</string>
    <string name="text_filter_file_audio">Audio</string>
</resources>