<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="ifRoom"
        android:title="@string/text_label_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
    <item
        android:id="@+id/action_notifications"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_notifications_24"
        app:showAsAction="ifRoom"
        android:title="@string/text_label_notifications" />
    <item
        android:id="@+id/action_project_permissions"
        android:enabled="true"
        app:showAsAction="never"
        android:title="@string/text_label_permissions" />
    <item
        android:id="@+id/action_evaluate_project"
        android:enabled="true"
        app:showAsAction="never"
        android:visible="false"
        android:title="@string/text_label_evaluate" />
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        app:showAsAction="never"
        android:title="@string/text_label_settings" />
    <item
        android:id="@+id/action_logout"
        android:enabled="true"
        app:showAsAction="never"
        android:title="@string/text_label_logout" />
</menu>