<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_exam_partecipants"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_group_24"
        android:title="@string/text_label_exam_partecipants"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_notifications"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_notifications_24"
        app:showAsAction="ifRoom"
        android:title="@string/text_label_notifications" />
    <item
        android:id="@+id/action_abandons_exam"
        android:enabled="true"
        android:title="@string/text_label_abandons_exam"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:enabled="true"
        app:showAsAction="never"
        android:title="@string/text_label_logout" />

</menu>